--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -179,6 +179,18 @@
 
     <section id="projects">
         <h1 class="fs-1 p-2">Проекты</h1>
+
+            <div class="container my-5 bg-light-primary border border-2 rounded-4 g-0 p-3 shadow">
+                <form>
+                    <div class="form-floating d-flex rounded-start" role="search">
+                        <input name="search-text" class="form-control border-0 shadow-none" type="search" id="floatingSearch" placeholder="Поиск проекта" aria-label="Search">
+                        <label for="floatingSearch">Поиск проекта</label>
+                        <div class="vr"></div>
+                        <button class="btn border-0" type="submit">Поиск</button>
+                    </div>
+                </form>
+            </div>
+            
         <div class="container">
             <div class="grid mt-4">
                 <div class="row gy-5 gx-0 justify-content-between">
