--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -141,8 +141,13 @@
             <p class="fs-5">{{project.description}}</p>
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" x="0px" y="0px" viewBox="0 0 2560 100" style="enable-background:new 0 0 2560 100" xml:space="preserve" class="">
-                <polygon points="2560 0 2560 100 0 100" fill="white"></polygon>
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(-5.000000,200.000000) scale(1.000000,-0.1300000)" fill="white" class="svgObj">
+                    <path d="M0 725 l0 -725 1000 0 1000 0 0 645 c0 355 -3 645 -7 645 -3 0 -55
+                    -23 -114 -50 -128 -59 -203 -74 -491 -92 -203 -13 -397 -3 -547 28 -118 25
+                    -426 127 -533 178 -54 25 -102 46 -108 46 -5 0 -49 11 -96 25 -47 14 -90 25
+                    -95 25 -5 0 -9 -309 -9 -725z"/>
+                </g>
             </svg>
         </div>
     </section>
