--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -163,7 +163,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">{{card.title}}</h5>
                                 <p class="card-text">{{card.description}}</p>
-                                <button type="button" class="btn btn-sm btn-outline-dark rounded-3" data-bs-toggle="modal" data-bs-target="#invite-prj">Записаться</button>
+                                <button type="button" class="btn btn-sm btn-outline-dark rounded-3 lastBtn" data-bs-toggle="modal" data-bs-target="#invite-prj">Записаться</button>
                             </div>
                         </div>
                     </div>
